piplineio/ingress/proxies/airflow-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: airflow-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # type of authentication
    ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropiate context why the authentication is required
    ingress.kubernetes.io/auth-realm: "Authentication Required - airflow"
spec:
  rules:
  - host: airflow.kg-af.knowledgegrids.com
    http:
      paths:
      - path: /
        backend:
          serviceName: airflow
          servicePort: 80
