piplineio/ingress/proxies/hbase-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hbase-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # type of authentication
    ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropiate context why the authentication is required
    ingress.kubernetes.io/auth-realm: "Authentication Required - hbase"
spec:
  rules:
  - host: hbase.kg-af.knowledgegrids.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hbase-master-2
          servicePort: 60001
