piplineio/ingress/proxies/spark-master-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spark-master-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # type of authentication
    ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropiate context why the authentication is required
    ingress.kubernetes.io/auth-realm: "Authentication Required - spark-master"
spec:
  rules:
  - host: spark-master.kg-af.knowledgegrids.com
    http:
      paths:
      - path: /
        backend:
          serviceName: spark-master-2-0-1
          servicePort: 80
